# Tplai

./: Backend.cpp  Backend.h  CMakeLists.txt  Frontend.cpp  Frontend.h  README.md  Tplai - Shortcut.lnk  Tplai.cpp  Tplai.h  Tplai.lnk  main.cpp
Tplai/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja
Tplai/.cmake/api/v1/reply/: cache-v2-cad6892612f2caf0ae8e.json  codemodel-v2-017ae3eba8c49e3f3ef0.json  index-2025-02-04T14-38-18-0674.json  index-2025-02-04T14-44-39-0630.json  index-2025-02-26T20-15-19-0466.json  target-Tplai-Release-a1e9e15af39ff378059a.json  target-Tplai-Release-b5bc8e5729877a20b345.json
x64-release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
x64-release/.cmake/api/v1/reply/: cache-v2-598fe9b23d50e5ee411f.json  cache-v2-d90a505c35da025aa6f2.json  cmakeFiles-v1-0c26ac43c7fe249e527a.json  codemodel-v2-11978402947d02f057cd.json  index-2025-02-03T18-23-16-0398.json  index-2025-02-26T20-36-59-0458.json
